--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=Calendar
+
+spring.datasource.url=jdbc:mysql://localhost:3306/calendar
+spring.datasource.username=root
+spring.datasource.password=0724
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
